# corba-codesets

./: .gitignore  CMakeLists.txt  README.md  run.sh  svc-cp850.conf  svc-iso.conf  svc-utf8.conf
src/client/: main.cpp
src/common/: AnyEventConsumer.h  EventConsumer.h  EventProducer.h  NativeWrapper.cpp  NativeWrapper.h  StringBuilder.h  TestUtil.cpp  TestUtil.h  Token.h  common.cpp  common.h
src/cp850factory/: Char_IBM850_ISO8859_Factory.cpp  Char_IBM850_ISO8859_Factory.h  Char_IBM850_ISO8859_Translator.cpp  Char_IBM850_ISO8859_Translator.h  IBM850_ISO8859_export.h
src/idl/: test.idl
src/server/: main.cpp
